--- a/default.config
+++ b/default.config
@@ -3,3 +3,5 @@ PROJECT=jamieduncan
 CLUSTER_LIST=clusters.config
 ASM_VER=1.6.5-asm.7
 GCP_EMAIL_ADDRESS=jamieduncan@google.com
+DEPLOY_ASM=true
+DEPLOY_ACM=true
