getting close to a 0.1 release

--- a/cfg/default.config
+++ b/cfg/default.config
@@ -1,6 +1,6 @@
 REGION=us-east1
 PROJECT=jamieduncan
-CLUSTER_LIST=clusters.config
+CLUSTER_LIST=cfg/clusters.config
 ASM_VER=1.6.5-asm.7
 GCP_EMAIL_ADDRESS=jamieduncan@google.com
 DEPLOY_ASM=true
