works on my cloudtop ready for add'l testing

--- a/addons/acm/config-management.yaml
+++ b/addons/acm/config-management.yaml
@@ -9,5 +9,4 @@ spec:
   clusterName: CLUSTER
   git:
     syncRepo: https://source.developers.google.com/p/PROJECT/r/REPO_NAME
-    secretType: gcencode
-    policyDir: "anthos-lab"
+    secretType: gcenode
