--- a/cfg/default.config
+++ b/cfg/default.config
@@ -1,5 +1,6 @@
 REGION=us-east1
 PROJECT=jamieduncan
+PROJECT_NUMBER=559083212340
 CLUSTER_LIST=cfg/clusters.config
 ASM_VER=1.6.5-asm.7
 GCP_EMAIL_ADDRESS=jamieduncan@google.com
