--- a/src/addons/acm/config-management.yaml
+++ b/src/addons/acm/config-management.yaml
@@ -17,10 +17,11 @@
 apiVersion: configmanagement.gke.io/v1
 kind: ConfigManagement
 metadata:
-  name: config-management
+  name: anthos-lab-cluster
 spec:
   # clusterName is required and must be unique among all managed clusters
   clusterName: CLUSTER
   git:
     syncRepo: https://source.developers.google.com/p/PROJECT/r/REPO_NAME
+    syncBranch: master
     secretType: gcenode
